err/django-templated-email-db.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_templated_email_db-0.4.15.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/templated_email'...
Compiling './lib/python3.5/site-packages/templated_email/__init__.py'...
***   File "./lib/python3.5/site-packages/templated_email/__init__.py", line 23
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/templated_email/backends'...
Listing './lib/python3.5/site-packages/templated_email/backends/database'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/locale'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/locale/ru'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/static'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/static/codemirror'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/static/codemirror/lib'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/static/codemirror/mode'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/static/codemirror/mode/css'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/static/codemirror/mode/htmlembedded'...
Listing './lib/python3.5/site-packages/templated_email/backends/database/static/codemirror/mode/htmlmixed'...
Compiling './lib/python3.5/site-packages/templated_email/backends/vanilla_django.py'...
***   File "./lib/python3.5/site-packages/templated_email/backends/vanilla_django.py", line 77
    except BlockNotFound, error:
                        ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
